--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "bootstrap-sass-official": "^3.2.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~0.10.0"
+    "angular-material": "~0.10.0",
+    "materialize": "~0.97.0",
+    "angular-materialize": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
